--- a/data/locales/en_GB.csv
+++ b/data/locales/en_GB.csv
@@ -13,6 +13,7 @@ HEAD_TITLE_CARROUSEL;Carousel
 HEAD_TITLE_CONTACT;Reservations / Contact
 HEAD_TITLE_SEASON;Seasons management
 HEAD_TITLE_PRODUCTS;Products
+HEAD_TITLE_DISPONIBILITES;Availabilities
 GLOBAL_MENU_HOME;Home
 GLOBAL_MENU_CHAMBRES;Our guesthouse
 GLOBAL_MENU_GITE;Our mountain chalet
@@ -164,7 +165,7 @@ GOLDBOOK_FORM_LABEL_DEPART;Date of arrival
 GOLDBOOK_FORM_LABEL_ARRIVEE;Date of departure
 GOLDBOOK_FORM_SUBMIT;Submit testimony
 DISPONIBILITES_DEMANDE_RESERVATION;Ask for a reservation
-DISPONIBILITES_TITRE;Availabilities
+HEAD_TITLE_DISPONIBILITES;Availabilities
 CONTACT_TITLE;Reserve / Contact us
 CONTACT_MAP_TITLE;How to locate us
 CONTACT_FORM_FIELDSET_INFORMATIONS;About you
