--- a/data/locales/en_GB/LC_MESSAGES/application.po
+++ b/data/locales/en_GB/LC_MESSAGES/application.po
@@ -29,6 +29,8 @@ msgid "HEAD_TITLE_SEASON"
 msgstr "Seasons management"
 msgid "HEAD_TITLE_PRODUCTS"
 msgstr "Products"
+msgid "HEAD_TITLE_DISPONIBILITES"
+msgstr "Availabilities"
 msgid "GLOBAL_MENU_HOME"
 msgstr "Home"
 msgid "GLOBAL_MENU_CHAMBRES"
@@ -331,7 +333,7 @@ msgid "GOLDBOOK_FORM_SUBMIT"
 msgstr "Submit testimony"
 msgid "DISPONIBILITES_DEMANDE_RESERVATION"
 msgstr "Ask for a reservation"
-msgid "DISPONIBILITES_TITRE"
+msgid "HEAD_TITLE_DISPONIBILITES"
 msgstr "Availabilities"
 msgid "CONTACT_TITLE"
 msgstr "Reserve / Contact us"
