--- a/data/locales/fr_FR/LC_MESSAGES/application.po
+++ b/data/locales/fr_FR/LC_MESSAGES/application.po
@@ -5,8 +5,6 @@ msgid "ERROR_404_TITLE"
 msgstr "Oops !"
 msgid "ERROR_404_CONTENT"
 msgstr "Oops ! La page souhaitée n'existe pas =/"
-msgid "META_KEYWORDS"
-msgstr "accomodation bagnères de luchon, accomodation luchon, b et b luchon, b&b luchon, bagnères de luchon, bed and breakfast bagnères de luchon, bedandbreakfast luchon"
 msgid "META_DESCRIPTION"
 msgstr "Luchon Location Vacances : Gites et Chambres de Charme en Pays de Luchon"
 msgid "GLOBAL_HEADER_TITLE"
@@ -15,8 +13,6 @@ msgid "HEAD_TITLE_HOME"
 msgstr "Accueil"
 msgid "HEAD_TITLE_PARTNERS"
 msgstr "Partenaires"
-msgid "HEAD_TITLE_CONNECTION"
-msgstr "Connexion"
 msgid "HEAD_TITLE_NEWS"
 msgstr "Actualités"
 msgid "HEAD_TITLE_ACTIVITY"
@@ -33,6 +29,8 @@ msgid "HEAD_TITLE_PRODUCTS"
 msgstr "Produits"
 msgid "HEAD_TITLE_TRADUCTION"
 msgstr "Traductions"
+msgid "HEAD_TITLE_DISPONIBILITES"
+msgstr "Disponibilités"
 msgid "GLOBAL_MENU_HOME"
 msgstr "Accueil"
 msgid "GLOBAL_MENU_CHAMBRES"
@@ -541,3 +539,7 @@ msgid "PRODUCTS_EDIT_PRICE_SAISON_MIDWEEK"
 msgstr "Mid-week"
 msgid "PRODUCT_PRICE_NIGHT_EMPTY"
 msgstr "\"&times"
+msgid "META_KEYWORDS"
+msgstr "accomodation bagnères de luchon, accomodation luchon, b et b luchon, b&b luchon, bagnères de luchon, bed and breakfast bagnères de luchon, bedandbreakfast luchon"
+msgid "HEAD_TITLE_CONNECTION"
+msgstr "Connexion"
