--- a/data/locales/fr_FR/LC_MESSAGES/application.po
+++ b/data/locales/fr_FR/LC_MESSAGES/application.po
@@ -1,545 +1,833 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: Alec <aroybase@hotmail.fr>\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.7\n"
+
 msgid "ERROR_404_TITLE"
 msgstr "Oops !"
+
 msgid "ERROR_404_CONTENT"
 msgstr "Oops ! La page souhaitée n'existe pas =/"
+
 msgid "META_DESCRIPTION"
-msgstr "Luchon Location Vacances : Gites et Chambres de Charme en Pays de Luchon"
+msgstr ""
+"Luchon Location Vacances : Gites et Chambres de Charme en Pays de Luchon"
+
 msgid "GLOBAL_HEADER_TITLE"
 msgstr "Luchon Location Vacances"
+
 msgid "HEAD_TITLE_HOME"
 msgstr "Accueil"
+
 msgid "HEAD_TITLE_PARTNERS"
 msgstr "Partenaires"
+
 msgid "HEAD_TITLE_NEWS"
 msgstr "Actualités"
+
 msgid "HEAD_TITLE_ACTIVITY"
 msgstr "Activités"
+
 msgid "HEAD_TITLE_ERROR"
 msgstr "ERREUR"
+
 msgid "HEAD_TITLE_CARROUSEL"
 msgstr "Carrousel"
+
 msgid "HEAD_TITLE_CONTACT"
 msgstr "Réservation / Contact"
+
 msgid "HEAD_TITLE_SEASON"
 msgstr "Gestion des saisons"
+
 msgid "HEAD_TITLE_PRODUCTS"
 msgstr "Produits"
+
 msgid "HEAD_TITLE_TRADUCTION"
 msgstr "Traductions"
+
 msgid "HEAD_TITLE_DISPONIBILITES"
 msgstr "Disponibilités"
+
 msgid "GLOBAL_MENU_HOME"
 msgstr "Accueil"
+
 msgid "GLOBAL_MENU_CHAMBRES"
 msgstr "Nos chambres d'hôtes"
+
 msgid "GLOBAL_MENU_GITE"
 msgstr "Notre chalet de montagne"
+
 msgid "GLOBAL_MENU_NEWS"
 msgstr "Actualités"
+
 msgid "GLOBAL_MENU_ACTIVITIES"
 msgstr "Activités et loisirs"
+
 msgid "GLOBAL_MENU_CONTACT"
 msgstr "Pour réserver"
+
 msgid "GLOBAL_MENU_PARTNERS"
 msgstr "Partenaires"
+
 msgid "GLOBAL_MENU_LOCATIONS"
 msgstr "Locations"
+
 msgid "GLOBAL_MENU_DISPONIBILITES"
 msgstr "Disponibilités"
+
 msgid "GLOBAL_MENU_PLAN"
 msgstr "Plan du site"
+
 msgid "GLOBAL_OUI"
 msgstr "Oui"
+
 msgid "GLOBAL_NON"
 msgstr "Non"
+
 msgid "GLOBAL_AUCUNE"
 msgstr "Aucune"
+
 msgid "GLOBAL_FORM_ENVOYER"
 msgstr "Envoyer"
+
 msgid "GLOBAL_FORM_CONFIRMER"
 msgstr "Confirmer"
+
 msgid "GLOBAL_FORM_VALIDER"
 msgstr "Valider"
+
 msgid "GLOBAL_FORM_SUBMIT"
 msgstr "Enregistrer"
+
 msgid "GLOBAL_FORM_SUBMIT_QUIT"
 msgstr "Enregistrer & quitter"
+
 msgid "GLOBAL_COORDONNEES_ADRESSE"
 msgstr "Adresse : 28, avenue de Gascogne - 31 110 Saint Mamet"
+
 msgid "GLOBAL_COORDONNEES_TELEPHONE_LABEL"
 msgstr "Tél."
+
 msgid "GLOBAL_COORDONNEES_TELEPHONE"
 msgstr "+33(0) 561 891 353"
+
 msgid "GLOBAL_COORDONNEES_MOBILE_LABEL"
 msgstr "Mob."
+
 msgid "GLOBAL_COORDONNEES_MOBILE"
 msgstr "+33(0) 618 641 429"
+
 msgid "GLOBAL_COORDONNEES_GPS_LABEL"
 msgstr "Coordonnées GPS"
+
 msgid "GLOBAL_BACK"
 msgstr "Retourner à la liste"
+
 msgid "GLOBAL_BACK_HOME"
 msgstr "Retourner à l'accueil"
+
 msgid "GLOBAL_BACK_SIMPLE"
 msgstr "Retour"
+
 msgid "GLOBAL_CHAMP_OBLIGATOIRE"
 msgstr "*"
+
 msgid "GLOBAL_MONNAIE"
 msgstr "euros"
+
 msgid "GLOBAL_MONTH_LABEL01"
 msgstr "Janvier"
+
 msgid "GLOBAL_MONTH_LABEL02"
 msgstr "Février"
+
 msgid "GLOBAL_MONTH_LABEL03"
 msgstr "Mars"
+
 msgid "GLOBAL_MONTH_LABEL04"
 msgstr "Avril"
+
 msgid "GLOBAL_MONTH_LABEL05"
 msgstr "Mai"
+
 msgid "GLOBAL_MONTH_LABEL06"
 msgstr "Juin"
+
 msgid "GLOBAL_MONTH_LABEL07"
 msgstr "Juillet"
+
 msgid "GLOBAL_MONTH_LABEL08"
 msgstr "Août"
+
 msgid "GLOBAL_MONTH_LABEL09"
 msgstr "Septembre"
+
 msgid "GLOBAL_MONTH_LABEL10"
 msgstr "Octobre"
+
 msgid "GLOBAL_MONTH_LABEL11"
 msgstr "Novembre"
+
 msgid "GLOBAL_MONTH_LABEL12"
 msgstr "Décembre"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT01"
 msgstr "Jan"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT02"
 msgstr "Fév"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT03"
 msgstr "Mars"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT04"
 msgstr "Avr"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT05"
 msgstr "Mai"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT06"
 msgstr "Juin"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT07"
 msgstr "Juil"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT08"
 msgstr "Août"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT09"
 msgstr "Sept"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT10"
 msgstr "Oct"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT11"
 msgstr "Nov"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT12"
 msgstr "Déc"
+
 msgid "GLOBAL_DAY_LABEL0"
 msgstr "Dimanche"
+
 msgid "GLOBAL_DAY_LABEL1"
 msgstr "Lundi"
+
 msgid "GLOBAL_DAY_LABEL2"
 msgstr "Mardi"
+
 msgid "GLOBAL_DAY_LABEL3"
 msgstr "Mercredi"
+
 msgid "GLOBAL_DAY_LABEL4"
 msgstr "Jeudi"
+
 msgid "GLOBAL_DAY_LABEL5"
 msgstr "Vendredi"
+
 msgid "GLOBAL_DAY_LABEL6"
 msgstr "Samedi"
+
 msgid "GLOBAL_DAY_LABEL_SHORT0"
 msgstr "Di"
+
 msgid "GLOBAL_DAY_LABEL_SHORT1"
 msgstr "Lu"
+
 msgid "GLOBAL_DAY_LABEL_SHORT2"
 msgstr "Ma"
+
 msgid "GLOBAL_DAY_LABEL_SHORT3"
 msgstr "Me"
+
 msgid "GLOBAL_DAY_LABEL_SHORT4"
 msgstr "Je"
+
 msgid "GLOBAL_DAY_LABEL_SHORT5"
 msgstr "Ve"
+
 msgid "GLOBAL_DAY_LABEL_SHORT6"
 msgstr "Sa"
+
 msgid "GLOBAL_DATEPICKER_CLOSETEXT"
 msgstr "Terminer"
+
 msgid "GLOBAL_DATEPICKER_PREVIOUS"
 msgstr "Précédent"
+
 msgid "GLOBAL_DATEPICKER_NEXT"
 msgstr "Suivant"
+
 msgid "GLOBAL_DATEPICKER_CURRENT"
 msgstr "Aujourd'hui"
+
 msgid "GLOBAL_DATEPICKER_WEEK"
 msgstr "Semaine"
+
 msgid "GLOBAL_DATEPICKER_FORMAT"
 msgstr "dd/mm/yy"
+
 msgid "GLOBAL_DATEPICKER_FIRSTDAY"
 msgstr "1"
+
 msgid "GLOBAL_TIME_SEPARATOR_LABEL"
 msgstr "à"
+
 msgid "GLOBAL_WEEK_LABEL_SHORT"
 msgstr "Sem."
+
 msgid "FOOTER_COPYRIGHT"
 msgstr "Tous droits reservés© 2008"
+
 msgid "FOOTER_CREDITS"
 msgstr "Réalisation :"
+
 msgid "FOOTER_PARTENAIRES"
 msgstr "Partenaires"
+
 msgid "HOME_NEWS_TITRE"
 msgstr "Dernières nouvelles"
+
 msgid "HOME_NEWS_MORE"
 msgstr "Voir les autres actualités"
+
 msgid "HOME_NEWS_NEXT"
 msgstr "Lire la suite de l'article"
+
 msgid "HOME_ACTIVITY_TITRE"
 msgstr "Activité au hasard"
+
 msgid "HOME_ACTIVITY_MORE"
 msgstr "Voir les autres activités"
+
 msgid "HOME_ACTIVITY_NEXT"
 msgstr "Lire la suite de l'article"
+
 msgid "NEWS_LIST_TITLE"
 msgstr "Actualités"
+
 msgid "NEWS_LIST_TITRE"
 msgstr "Titre"
+
 msgid "NEWS_LIST_CATEGORIE"
 msgstr "Catégorie"
+
 msgid "NEWS_LIST_ONLINE"
 msgstr "En ligne ?"
+
 msgid "NEWS_CATEGORY_LABEL"
 msgstr "Catégorie"
+
 msgid "NEWS_EDIT_LOCATION_LABEL"
 msgstr "Coordonnées GPS"
+
 msgid "NEWS_ELEMENT_ILLUSTRATION"
 msgstr "Galerie photo"
+
 msgid "NEWS_LIST_NORESULT"
 msgstr "Il n'y a aucune actualité"
+
 msgid "NEWS_LIST_DATE_PUBLICATION"
 msgstr "Publié le"
+
 msgid "NEWS_LIST_EN_SAVOIR_PLUS"
 msgstr "Cliquez pour en savoir plus"
+
 msgid "ACTIVITY_LIST_TITLE"
 msgstr "Activités"
+
 msgid "ACTIVITY_LIST_TITRE"
 msgstr "Titre"
+
 msgid "ACTIVITY_LIST_CATEGORIE"
 msgstr "Catégorie"
+
 msgid "ACTIVITY_LIST_ONLINE"
 msgstr "En ligne ?"
+
 msgid "ACTIVITY_CATEGORY_LABEL"
 msgstr "Catégorie"
+
 msgid "ACTIVITY_ELEMENT_ILLUSTRATION"
 msgstr "Galerie photo"
+
 msgid "ACTIVITY_LIST_NORESULT"
 msgstr "Il n'y a aucune activité"
+
 msgid "PRODUCTS_CATEGORY_LIST_TITLE"
 msgstr "Catégories"
+
 msgid "PRODUCTS_PRODUCT_LIST_TITLE"
 msgstr "Produits"
+
 msgid "PRODUCTS_LIST_TYPE"
 msgstr "Type"
+
 msgid "PRODUCTS_LIST_TITRE"
 msgstr "Titre"
+
 msgid "PRODUCTS_LIST_DESCRIPTION"
 msgstr "Description"
+
 msgid "PRODUCTS_LIST_CATEGORIE"
 msgstr "Catégorie"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PRICINGTYPE"
 msgstr "Type de tarification"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PRICINGTYPE1"
 msgstr "A la nuitée"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PRICINGTYPE2"
 msgstr "A la saison"
+
 msgid "PRODUCTS_LIST_CATEGORIE_ROUTE"
 msgstr "URL de la catégorie"
+
 msgid "PRODUCTS_LIST_CATEGORIE_COORDONNEES"
 msgstr "Coordonnées GPS"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PINCOLOR"
 msgstr "Couleur du repère sur GoogleMap"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PINCOLOR_RED"
 msgstr "Rouge"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PINCOLOR_BLUE"
 msgstr "Bleu"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PINCOLOR_GREEN"
 msgstr "Vert"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PINCOLOR_PURPLE"
 msgstr "Violet"
+
 msgid "PRODUCTS_LIST_CATEGORIE_PINCOLOR_YELLOW"
 msgstr "Jaune"
+
 msgid "PRODUCTS_LIST_INTRO"
 msgstr "Introduction"
+
 msgid "PRODUCTS_ONGLET_CONTENT"
 msgstr "Description"
+
 msgid "PRODUCTS_ONGLET_PHOTOS"
 msgstr "Photos"
+
 msgid "PRODUCTS_ONGLET_PRIX"
 msgstr "Disponibilités & tarifs"
+
 msgid "PRODUCTS_ONGLET_RESERVER"
 msgstr "Reservation"
+
 msgid "PRODUCTS_PRIX_DISPO"
 msgstr "Disponibilités"
+
 msgid "PRODUCTS_PRIX_PRIX"
 msgstr "Tarifs"
+
 msgid "PRODUCTS_ONGLET_GOLDBOOK"
 msgstr "Livre d'or"
+
 msgid "PRODUCTS_PRIX_CALENDRIER"
 msgstr "Tarifs et calendrier des saisons"
+
 msgid "PRODUCT_PRICE_SEASON_CONTACT_US"
 msgstr "Contactez nous pour plus d'informations"
+
 msgid "PRODUCT_PRICE_NIGHT_NUIT_SING"
 msgstr "nuit"
+
 msgid "PRODUCT_PRICE_NIGHT_NUIT_PLUR"
 msgstr "nuits"
+
 msgid "PRODUCT_PRICE_NIGHT_PERSONNES_1"
 msgstr "1 personne"
+
 msgid "PRODUCT_PRICE_NIGHT_PERSONNES_2"
 msgstr "2 personnes"
+
 msgid "PRODUCT_PRICE_NIGHT_PERSONNES_3"
 msgstr "3 personnes"
+
 msgid "PRODUCT_PRICE_NIGHT_PERSONNES_4"
 msgstr "4 personnes"
+
 msgid "PRODUCT_PRICE_SEASON_EMPTY"
 msgstr "\"&times"
+
 msgid "PRODUCT_PRICE_SEASON_PERIODES_WEEK"
 msgstr "Semaine"
+
 msgid "PRODUCT_PRICE_SEASON_PERIODES_WEEKEND"
 msgstr "Week-end"
+
 msgid "PRODUCT_PRICE_SEASON_PERIODES_MIDWEEK"
 msgstr "Mid-week"
+
 msgid "PRODUCT_PRICE_SEASON_PERIODES_INDISPO"
 msgstr "Réservation ou tarif indisponible"
+
 msgid "PRODUCTS_GOLDBOOK_NEW_MESSAGE"
 msgstr "Vous avez séjourné ici ? Laissez nous un message !"
+
 msgid "PRODUCTS_GOLDBOOK_MESSAGES"
 msgstr "Témoignages de nos clients"
+
 msgid "PRODUCTS_GOLDBOOK_MESSAGES_DATES"
 msgstr "Dates du séjour"
+
 msgid "PRODUCTS_GOLDBOOK_MESSAGES_DATES_DU"
 msgstr "Du"
+
 msgid "PRODUCTS_GOLDBOOK_MESSAGES_DATES_AU"
 msgstr "au"
+
 msgid "PRODUCTS_GOLDBOOK_MESSAGES_MESSAGE"
 msgstr "Témoignage"
+
 msgid "GOLDBOOK_FORM_LABEL_CONTENU"
 msgstr "Votre message"
+
 msgid "GOLDBOOK_FORM_LABEL_DEPART"
 msgstr "Date de départ"
+
 msgid "GOLDBOOK_FORM_LABEL_ARRIVEE"
 msgstr "Date d'arrivée"
+
 msgid "GOLDBOOK_FORM_SUBMIT"
 msgstr "Laisser un message"
+
 msgid "DISPONIBILITES_DEMANDE_RESERVATION"
 msgstr "Effectuer une demande de réservation"
+
 msgid "DISPONIBILITES_TITRE"
 msgstr "Disponibilités"
+
 msgid "CONTACT_TITLE"
 msgstr "Réserver / Nous contacter"
+
 msgid "CONTACT_MAP_TITLE"
 msgstr "Nous localiser"
+
 msgid "CONTACT_FORM_FIELDSET_INFORMATIONS"
 msgstr "À propos de vous"
+
 msgid "CONTACT_FORM_LABEL_NOM"
 msgstr "Nom"
+
 msgid "CONTACT_FORM_LABEL_PRENOM"
 msgstr "Prénom"
+
 msgid "CONTACT_FORM_LABEL_EMAIL"
 msgstr "E-mail"
+
 msgid "CONTACT_FORM_LABEL_TELEPHONE"
 msgstr "Tél./Mob."
+
 msgid "CONTACT_FORM_LABEL_ADRESSE"
 msgstr "Adresse complète"
+
 msgid "CONTACT_FORM_FIELDSET_DEMANDE"
 msgstr "À propos de votre demande"
+
 msgid "CONTACT_FORM_LABEL_DECOUVERTE"
 msgstr "Comment nous avez vous découvert ?"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_VIDE"
 msgstr " ---"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_SE"
 msgstr "Moteur de recherche"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_ABRITEL"
 msgstr "Abritel"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_BOUCHEOREILLE"
 msgstr "Bouche à oreille"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_AUTRES"
 msgstr "Autrement"
+
 msgid "CONTACT_FORM_LABEL_ADULTES"
 msgstr "Nombre d'adultes"
+
 msgid "CONTACT_FORM_LABEL_ENFANTS"
 msgstr "Nombre d'enfants"
+
 msgid "CONTACT_FORM_LABEL_ARRIVEE"
 msgstr "Date arrivée souhaitée"
+
 msgid "CONTACT_FORM_LABEL_DEPART"
 msgstr "Date départ souhaitée"
+
 msgid "CONTACT_FORM_LABEL_LOCATIONS"
 msgstr "Location(s) souhaitée(s)"
+
 msgid "CONTACT_FORM_LABEL_PRECISIONS"
 msgstr "Souhaitez vous apporter des précisions (âge des enfants obligatoire) ?"
+
 msgid "CONTACT_ENVOI_MAIL_MESSAGE_SUCCES"
-msgstr "Votre message nous a bien été envoyé. Nous y répondrons dans les meilleurs délais."
+msgstr ""
+"Votre message nous a bien été envoyé. Nous y répondrons dans les meilleurs "
+"délais."
+
 msgid "CONTACT_ENVOI_MAIL_MESSAGE_OBLIGATOIRE"
 msgstr "Tous les champs marqués d'un * sont obligatoires."
+
 msgid "CONTACT_FORM_SUBMIT"
 msgstr "Faire une demande de réservation"
+
 msgid "CONTACT_ENVOI_MAIL_MAIL"
 msgstr "contact@gite-luchon.com"
+
 msgid "CONTACT_ENVOI_MAIL_SUJET"
 msgstr "[Gite-luchon.com] Nouvelle demande de réservation"
+
 msgid "CONTACT_ENVOI_MAIL_ALT"
-msgstr "Pour afficher ce message, vous devez utiliser un client compatible HTML"
+msgstr ""
+"Pour afficher ce message, vous devez utiliser un client compatible HTML"
+
 msgid "CONTACT_OPTION_CHALET"
 msgstr "Tout le chalet"
+
 msgid "ACTIVITY_EDIT_TABS_CONTENT"
 msgstr "Contenus"
+
 msgid "ACTIVITY_EDIT_TABS_PICTURES"
 msgstr "Illustrations"
+
 msgid "ACTIVITY_EDIT_TITLE"
 msgstr "Édition de l'activité"
+
 msgid "ACTIVITY_EDIT_TITLE_LABEL"
 msgstr "Titre"
+
 msgid "ACTIVITY_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
+
 msgid "ACTIVITY_EDIT_LINK_LABEL"
 msgstr "Lien"
+
 msgid "ACTIVITY_EDIT_LOCATION_LABEL"
 msgstr "Coordonnées GPS"
+
 msgid "NEWS_EDIT_TABS_CONTENT"
 msgstr "Contenus"
+
 msgid "NEWS_EDIT_TABS_PICTURES"
 msgstr "Illustrations"
+
 msgid "NEWS_EDIT_TITLE"
 msgstr "Édition de news"
+
 msgid "NEWS_EDIT_TITLE_LABEL"
 msgstr "Titre"
+
 msgid "NEWS_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
+
 msgid "NEWS_EDIT_LINK_LABEL"
 msgstr "Lien"
+
 msgid "ERROR_EXCEPTION_SITE_UNKNOWN"
 msgstr "Le site que vous essayez d'atteindre n'existe pas."
+
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT"
 msgstr "ERREUR TECHNIQUE : L'entity n'est pas correcte"
+
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME"
 msgstr "La propriété demandée n'existe pas"
+
 msgid "ERROR_DB_CONNECTION"
 msgstr "Erreur lors de la connexion à la base de données"
+
 msgid "META_GOOGLE_VERIF"
 msgstr "MyUxzCNcdspiFGJxWUrpzL0A2rf3TfQdg88ZBvrGL10"
+
 msgid "PRODUCTS_EDIT_CATEGORIE_TITLE"
 msgstr "Édition de la catégorie"
+
 msgid "PRODUCTS_EDIT_TABS_CONTENT"
 msgstr "Contenus"
+
 msgid "PRODUCTS_EDIT_TABS_PICTURES"
 msgstr "Illustrations"
+
 msgid "PRODUCTS_EDIT_TABS_GOLDBOOK"
 msgstr "Messages du Livre d'or publics"
+
 msgid "PRODUCTS_EDIT_TABS_GOLDBOOK_AVALIDER"
 msgstr "Messages du Livre d'or à valider"
+
 msgid "CONTACT_CENTER_COORDINATES_LAT"
 msgstr "42.814166"
+
 msgid "CONTACT_CENTER_COORDINATES_LONG"
 msgstr "0.55444"
+
 msgid "GLOBAL_ADMIN_ADD"
 msgstr "Ajouter un élément"
+
 msgid "GLOBAL_ADMIN_UPDATE"
 msgstr "Modifier un élément"
+
 msgid "GLOBAL_ADMIN_DELETE"
 msgstr "Supprimer un élément"
+
 msgid "GLOBAL_ADMIN_DELETE_CONFIRM"
 msgstr "Êtes-vous sûr de vouloir supprimer cet élément ?"
+
 msgid "GLOBAL_ADMIN_UP"
 msgstr "Remonter l'élément"
+
 msgid "GLOBAL_ADMIN_DOWN"
 msgstr "Descendre l'élément"
+
 msgid "GLOBAL_ADMIN_ONLINE"
 msgstr "Mettre en ligne"
+
 msgid "GLOBAL_ADMIN_OFFLINE"
 msgstr "Mettre hors ligne"
+
 msgid "GLOBAL_ADMIN_LIST_APERCU"
 msgstr "Aperçu"
+
 msgid "GLOBAL_ADMIN_LIST_DATE_AJOUT"
 msgstr "Ajouté le"
+
 msgid "GLOBAL_ADMIN_LIST_DATE_MODIFICATION"
 msgstr "Modifié le"
+
 msgid "GLOBAL_ADMIN_LIST_DATE_SUPPRESSION"
 msgstr "Supprimé le"
+
 msgid "GLOBAL_ADMIN_LIST_ACTIONS"
 msgstr "Actions"
+
 msgid "GLOBAL_LANGUAGETOGGLER_LABEL"
 msgstr "Changer la langue d'édition"
+
 msgid "GLOBAL_MODAL_DELETE_TEXT"
-msgstr "Vous êtes sur le point de supprimer un élément. Confirmez vous cette suppression ?"
+msgstr ""
+"Vous êtes sur le point de supprimer un élément. Confirmez vous cette "
+"suppression ?"
+
 msgid "GLOBAL_MODAL_DELETE_CONFIRM"
 msgstr "Confirmer"
+
 msgid "GLOBAL_MODAL_DELETE_CANCEL"
 msgstr "Annuler"
+
 msgid "GLOBAL_MENU_CARROUSEL"
 msgstr "Carrousel"
+
 msgid "GLOBAL_MENU_DECONNEXION"
 msgstr "Se déconnecter"
+
 msgid "GLOBAL_MENU_TRADUCTIONS"
 msgstr "Traductions"
+
 msgid "GLOBAL_MENU_SEASON"
 msgstr "Saisons"
+
 msgid "HOME_LOGIN_TITLE"
 msgstr "Connexion à l'interface d'administration"
+
 msgid "HOME_LOGIN_FORM_LOGIN_LABEL"
 msgstr "Identifiant"
+
 msgid "HOME_LOGIN_FORM_PASSWORD_LABEL"
 msgstr "Mot de passe"
+
 msgid "HOME_LOGIN_FORM_SUBMIT_LABEL"
 msgstr "Se connecter"
+
 msgid "HOME_PAGECMS_HOME_TITLE"
 msgstr "Édition de la page d'accueil"
+
 msgid "HOME_PAGECMS_PARTNERS_TITLE"
 msgstr "Édition de la page partenaires"
+
 msgid "HOME_PAGECMS_EDIT_TITLE_LABEL"
 msgstr "Titre"
+
 msgid "HOME_PAGECMS_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
+
 msgid "HOME_CARROUSEL_TITLE"
 msgstr "Édition des images du carrousel"
+
 msgid "HOME_CARROUSEL_FILE_LABEL"
 msgstr "Nouveau fichier"
+
 msgid "HOME_CARROUSEL_LIST_ID"
 msgstr "#"
+
 msgid "HOME_CARROUSEL_LIST_ORIGINALFILENAME"
 msgstr "Nom du fichier"
+
 msgid "HOME_CARROUSEL_LIST_TYPE"
 msgstr "Type"
+
 msgid "HOME_CARROUSEL_LIST_ONLINE"
 msgstr "En ligne ?"
+
 msgid "SEASON_CHANGE_YEAR"
 msgstr "Modifier pour l'année :"
+
 msgid "SEASON_TYPE"
 msgstr "Saison"
+
 msgid "TRADUCTION_TITLE"
 msgstr "Administration des traductions"
+
 msgid "PRODUCTS_EDIT_PRODUCT_TITLE"
 msgstr "Éditer la location"
+
 msgid "PRODUCTS_EDIT_TABS_PRICES"
 msgstr "Disponibilités & tarifs"
+
 msgid "PRODUCTS_EDIT_PRICE_DISPO"
 msgstr "Code HTML des disponibilités"
+
 msgid "PRODUCTS_EDIT_PRICE_NUIT1"
 msgstr "1 personne/nuit"
+
 msgid "PRODUCTS_EDIT_PRICE_NUIT2"
 msgstr "2 personnes/nuit"
+
 msgid "PRODUCTS_EDIT_PRICE_NUIT3"
 msgstr "3 personnes/nuit"
+
 msgid "PRODUCTS_EDIT_PRICE_NUIT4"
 msgstr "4 personnes/nuit"
+
 msgid "PRODUCTS_EDIT_PRICE_SAISON_SEMAINE"
 msgstr "Semaine"
+
 msgid "PRODUCTS_EDIT_PRICE_SAISON_WEEKEND"
 msgstr "Week-end"
+
 msgid "PRODUCTS_EDIT_PRICE_SAISON_MIDWEEK"
 msgstr "Mid-week"
+
 msgid "PRODUCT_PRICE_NIGHT_EMPTY"
 msgstr "\"&times"
+
 msgid "META_KEYWORDS"
-msgstr "accomodation bagnères de luchon, accomodation luchon, b et b luchon, b&b luchon, bagnères de luchon, bed and breakfast bagnères de luchon, bedandbreakfast luchon"
+msgstr ""
+"accomodation bagnères de luchon, accomodation luchon, b et b luchon, b&b "
+"luchon, bagnères de luchon, bed and breakfast bagnères de luchon, "
+"bedandbreakfast luchon"
+
 msgid "HEAD_TITLE_CONNECTION"
 msgstr "Connexion"
