Modification Sitemap + Calendrier tarifs saison

--- a/data/locales/en_GB.csv
+++ b/data/locales/en_GB.csv
@@ -142,14 +142,14 @@ PRODUCTS_PRIX_PRIX;Prices
 PRODUCTS_ONGLET_GOLDBOOK;Goldbook
 PRODUCTS_PRIX_CALENDRIER;Prices & season calendar
 PRODUCT_PRICE_SEASON_CONTACT_US;For more informations, please contact us
-PRODUCT_PRICE_NIGHT_EMPTY;"&times;1
+PRODUCT_PRICE_NIGHT_EMPTY;x;1
 PRODUCT_PRICE_NIGHT_NUIT_SING;night
 PRODUCT_PRICE_NIGHT_NUIT_PLUR;nights
 PRODUCT_PRICE_NIGHT_PERSONNES_1;1 person
 PRODUCT_PRICE_NIGHT_PERSONNES_2;2 people
 PRODUCT_PRICE_NIGHT_PERSONNES_3;3 people
 PRODUCT_PRICE_NIGHT_PERSONNES_4;4 people
-PRODUCT_PRICE_SEASON_EMPTY;"&times;1
+PRODUCT_PRICE_SEASON_EMPTY;x;1
 PRODUCT_PRICE_SEASON_PERIODES_WEEK;Week
 PRODUCT_PRICE_SEASON_PERIODES_WEEKEND;Week-end
 PRODUCT_PRICE_SEASON_PERIODES_MIDWEEK;Mid-week
