--- a/data/locales/es_ES.csv
+++ b/data/locales/es_ES.csv
@@ -171,14 +171,14 @@ PRODUCTS_PRIX_PRIX;Tarifas
 PRODUCTS_ONGLET_GOLDBOOK;Libro de oro
 PRODUCTS_PRIX_CALENDRIER;Tarifas y calendario de las temporadas
 PRODUCT_PRICE_SEASON_CONTACT_US;Póngase en contacto nosotros para más informaciones
-PRODUCT_PRICE_NIGHT_EMPTY;"&times;1
+PRODUCT_PRICE_NIGHT_EMPTY;x;1
 PRODUCT_PRICE_NIGHT_NUIT_SING;noche
 PRODUCT_PRICE_NIGHT_NUIT_PLUR;noches
 PRODUCT_PRICE_NIGHT_PERSONNES_1;1 persona 
 PRODUCT_PRICE_NIGHT_PERSONNES_2;2 personas 
 PRODUCT_PRICE_NIGHT_PERSONNES_3;3 personas
 PRODUCT_PRICE_NIGHT_PERSONNES_4;4 personas
-PRODUCT_PRICE_SEASON_EMPTY;"&times;1
+PRODUCT_PRICE_SEASON_EMPTY;x;1
 PRODUCT_PRICE_SEASON_PERIODES_WEEK;Semana
 PRODUCT_PRICE_SEASON_PERIODES_WEEKEND;Fin de semana
 PRODUCT_PRICE_SEASON_PERIODES_MIDWEEK;Medio de semana
