--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -148,7 +148,7 @@ PRODUCT_PRICE_NIGHT_PERSONNES_1;1 personne
 PRODUCT_PRICE_NIGHT_PERSONNES_2;2 personnes
 PRODUCT_PRICE_NIGHT_PERSONNES_3;3 personnes
 PRODUCT_PRICE_NIGHT_PERSONNES_4;4 personnes
-PRODUCT_PRICE_SEASON_EMPTY;"&times;1
+PRODUCT_PRICE_SEASON_EMPTY;x;1
 PRODUCT_PRICE_SEASON_PERIODES_WEEK;Semaine
 PRODUCT_PRICE_SEASON_PERIODES_WEEKEND;Week-end
 PRODUCT_PRICE_SEASON_PERIODES_MIDWEEK;Mid-week
@@ -266,6 +266,6 @@ PRODUCTS_EDIT_PRICE_NUIT4;4 personnes/nuit;1
 PRODUCTS_EDIT_PRICE_SAISON_SEMAINE;Semaine;1
 PRODUCTS_EDIT_PRICE_SAISON_WEEKEND;Week-end;1
 PRODUCTS_EDIT_PRICE_SAISON_MIDWEEK;Mid-week;1
-PRODUCT_PRICE_NIGHT_EMPTY;"&times;1
+PRODUCT_PRICE_NIGHT_EMPTY;&times;1
 META_KEYWORDS;accomodation bagnères de luchon, accomodation luchon, b et b luchon, b&b luchon, bagnères de luchon, bed and breakfast bagnères de luchon, bedandbreakfast luchon;1
 HEAD_TITLE_CONNECTION;Connexion;1
